<resources>
    <string name="app_name">Mask Up!</string>
    <string name="splashlogo">splashLogo</string>
    <string name="start_app">Start App</string>

    <string name="foundplace">Indica en donde encontraste tu cubrebocas.</string>
    <string name="timehint">HH:MM</string>

    <string name="ready_note">¡Listo! Se te notificara esos dias.</string>
    <string name="temporalfindmask">¡No olvides tu cubrebocas!</string>
    <string name="findMask">¿Donde esta mi cubrebocas?</string>

    <string name="alarm">"Alarma"</string>
    <string name="place">"Lugar"</string>

    <string name="emptyData">"¡No hay datos!"</string>
    <string name="emptyName">El lugar necesita un nombre.</string>

    <string name="newPlace">Nuevo Lugar</string>

    <string name="foundFacemask">¡Cubrebocas Encontrado!</string>

    <string name="daystext">Elige los dias que sales.</string>
    <string name="hourtext">Indica la hora que sales.</string>
    <string name="daysSaved">¡Dias y horas guardados!</string>
    <string name="placesSaved">¡Lugares guardados!</string>
    <string name="placetext">Indica que tanto visitas estas habitaciones en tu hogar.</string>

    <string name="saveButton">Guardar</string>
    <string name="loadButton">Cargar</string>
    <string name="newPlaceButton">Nuevo</string>

    <string name="returnerDays">Editar Alarmas</string>
    <string name="reviewerDays">Revisar Alarmas</string>
    <string name="returnerPlaces">Editar Lugares</string>
    <string name="reviewerPlaces">Revisar Lugares</string>

    <string name="statistics">Estadisticas</string>
    <string name="history">Historial</string>
    <string name="timesFound">Veces Encontrado Por Habitacion</string>

    <string name="daysSavefile">days</string>
    <string name="placesSavefile">places</string>
    <string name="findingsSavefile">findings</string>
</resources>